--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -36,7 +36,7 @@ nav {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -71,7 +71,7 @@ nav .links ul a {
   color: #fff;
   text-decoration: none;
   padding: 0px 15%;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 nav .links ul :hover {
   color: #2ab6c7;
@@ -102,7 +102,7 @@ nav .submenu .registro a {
   text-decoration: none;
 }
 nav .submenu .registro #entrar {
-  font-size: 0.9em;
+  font-size: 1em;
   color: #fff;
   padding: 0px 5%;
 }
@@ -114,6 +114,8 @@ nav .submenu .registro #registrate {
   background-color: #2ab6c7;
   border: 2px solid #2ab6c7;
   padding: 5px 6%;
+  box-sizing: initial;
+  text-align: center;
 }
 nav .submenu .carro {
   width: 30%;
@@ -130,36 +132,6 @@ nav .submenu .carro #carro {
 nav .regModal a {
   color: #fff;
 }
-@media (min-width: 1020px) {
-  nav .modal {
-    display: none;
-    background-color: #585654;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 1s;
-    z-index: -2;
-  }
-  nav .modal #modalregistro:target {
-    opacity: 1;
-    pointer-events: auto;
-  }
-}
-nav .modal .modalContent {
-  display: none;
-  pointer-events: none;
-  opacity: 0;
-  color: #fff;
-  position: relative;
-}
-nav .modal .modalContent a {
-  color: #fff;
-  text-decoration: none;
-}
 .nav-back {
   background-color: #fff;
   border-bottom: 1px solid #e8e8ec;
@@ -168,6 +140,7 @@ nav .modal .modalContent a {
   color: #585654;
 }
 .nav-back .submenu .registro #registrate {
+  box-sizing: initial;
   color: #2ab6c7;
   background-color: #fff;
   border: 2px solid #2ab6c7;
@@ -185,6 +158,138 @@ nav .modal .modalContent a {
 }
 .nav-back .regModal a {
   color: #585654;
+}
+.modal-backdrop {
+  z-index: 8;
+}
+.modal-dialog {
+  width: 750px;
+  margin: 6% auto;
+}
+.modal-content {
+  border-radius: 3px;
+}
+.modal-flex {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.modal-flex .publi {
+  width: 50%;
+}
+.modal-flex .publi img {
+  width: 103%;
+  height: 100%;
+}
+.modal-flex .modal-header {
+  width: 100%;
+  text-align: center;
+  border: 0px;
+  padding: 15px 15px 10px 15px;
+}
+.modal-flex .modal-header h4 {
+  color: #585654;
+  font-size: 1.3em;
+  font-weight: 400;
+}
+.modal-flex .modal-body {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+}
+.modal-flex .modal-body p {
+  text-align: center;
+  color: #585654;
+  font-size: 0.9em;
+  padding-bottom: 20px;
+}
+.modal-flex .inicio {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  padding: 0px 2%;
+}
+.modal-flex .inicio .social {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  text-align: center;
+}
+.modal-flex .inicio .social a {
+  color: #fff;
+}
+.modal-flex .inicio .social i {
+  padding: 0px 30px;
+  color: #fff;
+}
+.modal-flex .inicio .social .Modalboton {
+  margin-bottom: 4%;
+  padding: 12px;
+  border-radius: 3px;
+  text-align: left;
+}
+.modal-flex .inicio .social .face {
+  background-color: #3b5998;
+}
+.modal-flex .inicio .social .face:hover {
+  background-color: #2d4373;
+}
+.modal-flex .inicio .social .tuit {
+  background-color: #55acee;
+}
+.modal-flex .inicio .social .tuit:hover {
+  background-color: #2795e9;
+}
+.modal-flex .inicio .social p {
+  color: #585654;
+}
+.modal-flex .inicio .login {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.modal-flex .inicio .login form input {
+  width: 100%;
+  background-color: #e8e8ec;
+  margin-bottom: 4%;
+  padding: 10px;
+  border-radius: 3px;
+  text-align: left;
+  border: 1px solid #bbb;
+}
+.modal-flex .inicio .login a {
+  color: #585654;
+  width: 100%;
+  padding: 10px 0px;
+}
+.modal-flex .inicio .login #olvidado:hover {
+  color: #2ab6c7;
+}
+.modal-flex .inicio .initBoton {
+  text-align: center;
+  padding: 10px;
+  border-radius: 3px;
+  text-align: center;
+  background-color: #2ab6c7;
+}
+.modal-flex .inicio .initBoton a {
+  color: #fff;
+}
+.modal-flex .inicio .initBoton:hover {
+  background-color: #218f9d;
+}
+.modal-flex .inicio .newlogin {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  width: 100%;
+  padding-top: 20px;
+  border-top: 1px solid #e8e8ec;
+  font-size: 1em;
+  text-align: center;
+}
+.modal-flex .inicio .newlogin a {
+  color: #2ab6c7;
 }
 .principal {
   background-image: url("../images/video.jpg");
@@ -595,7 +700,7 @@ nav .modal .modalContent a {
   width: 80%;
   padding: 20px 0px 40px 0px;
   border-bottom: 1px solid #e8e8ec;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 .footer .foot .titulo {
   font-weight: 500;
@@ -650,7 +755,7 @@ nav .modal .modalContent a {
 }
 .footer .foot .social ul a i {
   width: 10%;
-  padding: 0px 5px;
+  padding: 0px;
   text-align: center;
   font-size: 20px;
 }
@@ -681,7 +786,7 @@ nav .modal .modalContent a {
   justify-content: space-between;
 }
 .footer .foot .news .regist form input {
-  width: 65%;
+  width: 75%;
 }
 .footer .foot .news .regist form input[type="text"i] {
   padding: 1px 10px;
